<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/light_gray"
            tools:context=".view.signUpForm.SignUpForm">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login_form"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="100dp" />

        <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

        <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_password"
                android:maxLines="1"
                android:inputType="numberPassword" />

        <Button
                    android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:padding="15dp"
                android:backgroundTint="@color/black"
                android:layout_margin="20dp" />

        <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="50dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
